fixup!: run test with sudo
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -92,4 +92,4 @@ runs:
         GH_USERNAME: ${{ inputs.gh-username }}
         GH_ACCESS_TOKEN: ${{ inputs.gh-access-token }}
         KUBECONFIG: ${{ env.KUBECONFIG }}
-      run: go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
+      run: sudo -E go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
