--- a/.github/workflows/test-integration.yaml
+++ b/.github/workflows/test-integration.yaml
@@ -23,11 +23,33 @@ jobs:
           ls -lh ./e2e/bin/
           file ./e2e/bin/devpod-linux-amd64
 
+      - name: Setup SSH server
+        shell: bash
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y openssh-server
+          sudo systemctl restart ssh
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa -q || true
+          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
+
+          # Setup SSH for root
+          sudo mkdir -p /root/.ssh
+          sudo chmod 700 /root/.ssh
+          sudo cp ~/.ssh/id_rsa /root/.ssh/id_rsa
+          sudo cp ~/.ssh/id_rsa.pub /root/.ssh/id_rsa.pub
+          sudo cp ~/.ssh/authorized_keys /root/.ssh/authorized_keys
+          sudo chmod 600 /root/.ssh/id_rsa /root/.ssh/authorized_keys
+          sudo ssh -o StrictHostKeyChecking=no localhost echo "SSH works as root"
+
       - name: Run integration test
         working-directory: ./e2e
         run: |
           echo "=== Running integration tests ==="
           echo "Working directory: $(pwd)"
           echo "Binary location: $(ls -lh bin/)"
+          sudo go test -v -ginkgo.v -timeout 600s --ginkgo.label-filter=integration
           sudo go test -v -ginkgo.v -timeout 600s --ginkgo.label-filter=up-docker-build
           sudo go test -v -ginkgo.v -timeout 600s --ginkgo.label-filter=up-docker-build-compose
