fixup!: add go envs to reference existing cache
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/test-integration.yaml
+++ b/.github/workflows/test-integration.yaml
@@ -46,6 +46,9 @@ jobs:
 
       - name: Run integration test
         working-directory: ./e2e
+        env:
+          GOMODCACHE: /home/runner/go/pkg/mod
+          GOCACHE: /home/runner/.cache/go-build
         run: |
           echo "=== Running integration tests ==="
           echo "Working directory: $(pwd)"
