--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -77,4 +77,6 @@ runs:
         GH_USERNAME: ${{ inputs.gh-username }}
         GH_ACCESS_TOKEN: ${{ inputs.gh-access-token }}
         KUBECONFIG: ${{ env.KUBECONFIG }}
+        GOMODCACHE: /home/runner/go/pkg/mod
+        GOCACHE: /home/runner/.cache/go-build
       run: sudo -E go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
