fixup!: update labels that need more storage space
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -65,6 +65,12 @@ jobs:
           - label: up-kubernetes
             needs-kind: true
             needs-disk-space: true
+          - label: up-docker-compose
+            needs-disk-space: true
+          - label: up-docker-compose-build
+            needs-disk-space: true
+          - label: up-git-pr
+            needs-disk-space: true
 
     steps:
       - uses: jlumbroso/free-disk-space@v1.3.1
