--- a/.github/actions/run-integration-test/action.yml
+++ b/.github/actions/run-integration-test/action.yml
@@ -52,11 +52,14 @@ runs:
     - name: Run test
       shell: bash
       working-directory: ./e2e
+      env:
+        GH_USERNAME: ${{ inputs.gh-username }}
+        GH_ACCESS_TOKEN: ${{ inputs.gh-access-token }}
       run: |
         sudo \
-          GH_USERNAME="${{ inputs.gh-username }}" \
-          GH_ACCESS_TOKEN="${{ inputs.gh-access-token }}" \
-          KUBECONFIG="${KUBECONFIG}" \
+          GH_USERNAME="${GH_USERNAME}" \
+          GH_ACCESS_TOKEN="${GH_ACCESS_TOKEN}" \
+          KUBECONFIG="${KUBECONFIG:-$HOME/.kube/config}" \
           PATH="${PATH}" \
           GOROOT="${GOROOT}" \
           go test -v -ginkgo.v -timeout 3600s --ginkgo.label-filter=${{ inputs.label }}
