fixup!: docker clean disk space
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/docker-install-test.yaml
+++ b/.github/workflows/docker-install-test.yaml
@@ -8,6 +8,8 @@ jobs:
   test-docker-install:
     runs-on: ubuntu-latest
     steps:
+      - uses: jlumbroso/free-disk-space@v1.3.1
+
       - uses: actions/checkout@v6
 
       - name: Setup Go
