--- a/.github/actions/compile-test-binary/action.yml
+++ b/.github/actions/compile-test-binary/action.yml
@@ -8,3 +8,14 @@ runs:
       uses: magnetikonline/action-golang-cache@v5
       with:
         go-version-file: go.mod
+
+    - name: Compile
+      shell: bash
+      run: |
+        go generate ./...
+        CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go
+
+    - name: Test
+      shell: bash
+      run: |
+        go test $(go list ./... | grep -v -e /vendor/ -e /test -e /e2e) -race -coverprofile=profile.out -covermode=atomic ./...
