fixup!: update names for ui workflow steps
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/build-user-interface.yaml
+++ b/.github/workflows/build-user-interface.yaml
@@ -25,12 +25,11 @@ jobs:
       - name: lint
         run: yarn lint:ci
 
-      - name: check format
+      - name: format
         run: yarn format:check
 
-      - name: check types
+      - name: types
         run: yarn types:check
 
-        # This only builds the frontend assets, not the full DevPod Desktop app to make it quicker
       - name: build
         run: yarn build
