--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -16,7 +16,8 @@ jobs:
       - name: Compile binary
         uses: ./.github/actions/compile-integration-test-binary
         with:
-          cache-key: ${{ runner.os }}-e2e-binary-${{ github.sha }}
+          cache-key-suffix: "e2e-tests"
+          binary-cache-key: ${{ runner.os }}-e2e-binary-${{ github.sha }}
 
   test:
     needs: setup
