--- a/.github/actions/compile-test-binary/action.yml
+++ b/.github/actions/compile-test-binary/action.yml
@@ -1,14 +1,22 @@
-name: Compile Binary
-description: Compile binary
+name: Compile and Test Binary
+description: Compile binary, run tests, and cache for integration tests
 
 inputs:
   cache-key-suffix:
     description: Suffix for cache key
     required: true
+  binary-cache-key:
+    description: Cache key for binary
+    required: true
+  binary-path:
+    description: Path where to build the binary
+    required: true
 
 runs:
   using: composite
   steps:
+    - uses: actions/checkout@v6
+
     - name: Setup Go
       uses: magnetikonline/action-golang-cache@v5
       with:
@@ -20,3 +28,21 @@ runs:
       run: |
         go generate ./...
         CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build main.go
+
+    - name: Test
+      shell: bash
+      run: |
+        go test $(go list ./... | grep -v -e /vendor/ -e /test -e /e2e) -race -coverprofile=profile.out -covermode=atomic ./...
+
+    - name: Build integration test binary
+      shell: bash
+      run: |
+        mkdir -p $(dirname ${{ inputs.binary-path }})
+        CGO_ENABLED=0 go build -ldflags "-s -w" -o ${{ inputs.binary-path }}
+
+    - name: Cache binary
+      uses: actions/cache/save@v4
+      with:
+        path: ${{ inputs.binary-path }}
+        key: ${{ inputs.binary-cache-key }}-${{ github.sha }}
+
