--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,25 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      # TODO: update 'uses' to @main when action is published
       - uses: ./.github/actions/compile-test-binary
         with:
           cache-key-suffix: "test"
-
-      - name: Test
-        run: |
-          go test $(go list ./... | grep -v -e /vendor/ -e /test -e /e2e) -race -coverprofile=profile.out -covermode=atomic ./...
-
-      - name: Build binary
-        run: |
-          mkdir -p ./e2e/bin
-          CGO_ENABLED=0 go build -ldflags "-s -w" -o ./e2e/bin/devpod-linux-amd64
-
-      - name: Cache binary
-        uses: actions/cache@v4
-        with:
-          path: ./e2e/bin
-          key: ${{ runner.os }}-e2e-binary-${{ github.sha }}
+          binary-cache-key: "test-binary"
+          binary-path: ./e2e/bin/devpod-linux-amd64
 
   integration-test-wave-1:
     needs: [test]
@@ -77,8 +63,8 @@ jobs:
           needs-kind: false
           gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
           gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
-          binary-cache-key: ${{ runner.os }}-e2e-binary-${{ github.sha }}
-          cache-key-suffix: "test"
+          binary-cache-key: "test-binary"
+          binary-path: ./e2e/bin/devpod-linux-amd64
 
   integration-test-wave-2:
     needs: [test]
@@ -121,7 +107,7 @@ jobs:
           gh-username: ${{ secrets.GH_PRIVATE_REPO_USER_TEST }}
           gh-access-token: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
           binary-cache-key: "test-binary"
-          cache-key-suffix: "test"
+          binary-path: ./e2e/bin/devpod-linux-amd64
 
   docker-install-test:
     needs: [test]
@@ -132,3 +118,11 @@ jobs:
       - uses: actions/checkout@v6
 
       - uses: ./.github/actions/docker-install-test
+
+  user-interface-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: ./.github/actions/build-user-interface
+
