--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   test:
+    name: Compile and Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -17,6 +18,7 @@ jobs:
           binary-path: ./e2e/bin/devpod-linux-amd64
 
   integration-test-wave-1:
+    name: Integration Tests Wave 1
     needs: [test]
     runs-on: ubuntu-latest
     permissions:
@@ -67,6 +69,7 @@ jobs:
           binary-path: ./e2e/bin/devpod-linux-amd64
 
   integration-test-wave-2:
+    name: Integration Tests Wave 2
     needs: [test]
     runs-on: ubuntu-latest
     permissions:
@@ -110,6 +113,7 @@ jobs:
           binary-path: ./e2e/bin/devpod-linux-amd64
 
   docker-install-test:
+    name: Docker Install Test
     needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -120,9 +124,9 @@ jobs:
       - uses: ./.github/actions/docker-install-test
 
   user-interface-test:
+    name: User Interface Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
 
       - uses: ./.github/actions/build-user-interface
-
