fixup!: refactor tauri build action
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/create-windows-release-artifacts/action.yml
+++ b/.github/actions/create-windows-release-artifacts/action.yml
@@ -29,17 +29,12 @@ runs:
   steps:
     - uses: actions/checkout@v6
 
-    - name: Build Desktop App
-      uses: tauri-apps/tauri-action@v0.6
+    - uses: ./.github/actions/build-tauri-app
       with:
-        projectPath: "./desktop"
-        args: " --target ${{ inputs.target }}"
-      env:
-        GITHUB_TOKEN: ${{ inputs.github_token }}
-        TAURI_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
-        TAURI_SIGNING_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
-        TAURI_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
-        TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
+        target: ${{ inputs.target }}
+        github_token: ${{ inputs.github_token }}
+        tauri_private_key: ${{ inputs.tauri_private_key }}
+        tauri_key_password: ${{ inputs.tauri_key_password }}
 
     - uses: actions/github-script@v6
       env:
