--- a/.github/actions/create-macos-release-artifacts/action.yml
+++ b/.github/actions/create-macos-release-artifacts/action.yml
@@ -23,17 +23,12 @@ runs:
   steps:
     - uses: actions/checkout@v6
 
-    - name: Build Desktop App
-      uses: tauri-apps/tauri-action@v0.6
+    - uses: ./.github/actions/build-tauri-app
       with:
-        releaseId: ${{ inputs.release_id }}
-        projectPath: "./desktop"
-        args: "--target ${{ inputs.target }}"
-        includeUpdaterJson: true
-      env:
-        GITHUB_TOKEN: ${{ inputs.github_token }}
-        TAURI_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
-        TAURI_SIGNING_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
-        TAURI_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
-        TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
+        target: ${{ inputs.target }}
+        release_id: ${{ inputs.release_id }}
+        include_updater_json: "true"
+        github_token: ${{ inputs.github_token }}
+        tauri_private_key: ${{ inputs.tauri_private_key }}
+        tauri_key_password: ${{ inputs.tauri_key_password }}
         CI: false
