fixup!: add tauri-cli install step
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/build-tauri-app/action.yml
+++ b/.github/actions/build-tauri-app/action.yml
@@ -31,6 +31,11 @@ runs:
   steps:
     - uses: actions/checkout@v6
 
+    - name: Install Tauri CLI
+      shell: bash
+      run: cargo install tauri-cli --version ^2.9.4 --locked
+      working-directory: "./desktop"
+
     - name: Build Desktop App
       uses: tauri-apps/tauri-action@v0.6
       with:
