--- a/.github/actions/setup-build-environment/action.yml
+++ b/.github/actions/setup-build-environment/action.yml
@@ -3,7 +3,7 @@ description: Setup all dependencies for building DevPod
 
 inputs:
   host:
-    description: Host OS (ubuntu-latest, ubuntu-24.04-arm64, macos-latest, windows-latest)
+    description: Host OS (ubuntu-latest, macos-latest, windows-latest)
     required: true
   target:
     description: Build target architecture
@@ -33,7 +33,7 @@ runs:
       working-directory: "./desktop"
 
     - name: Setup System Dependencies
-      if: (inputs.host == 'ubuntu-latest' || inputs.host == 'ubuntu-24.04-arm64') && inputs.cli_only == 'false'
+      if: inputs.host == 'ubuntu-latest' && inputs.cli_only == 'false'
       shell: bash
       run: |
         sudo apt-get update
