fixup!: shell formatting error in workflow
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/build-devcontainer-image.yml
+++ b/.github/workflows/build-devcontainer-image.yml
@@ -64,7 +64,7 @@ jobs:
                  --amend ghcr.io/skevetter/devpod:dev-amd64 \
                  --amend ghcr.io/skevetter/devpod:dev-arm64
 
-          docker manifest push ghcr.io/skevetter/$IMAGE_NAME
+          docker manifest push "ghcr.io/skevetter/$IMAGE_NAME"
 
       - name: Update devcontainer.json
         if: ${{ github.event_name == 'workflow_dispatch' }}
