--- a/.github/actions/build-tauri-app/action.yml
+++ b/.github/actions/build-tauri-app/action.yml
@@ -31,6 +31,11 @@ runs:
   steps:
     - uses: actions/checkout@v6
 
+    - name: Rust cache
+      uses: swatinem/rust-cache@v2
+      with:
+        workspaces: "./desktop/src-tauri -> target"
+
     - name: Install Tauri CLI
       shell: bash
       run: cargo install tauri-cli --version ^2.9.4 --locked
