fixup!: tauri build
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/setup-build-environment/action.yml
+++ b/.github/actions/setup-build-environment/action.yml
@@ -72,7 +72,7 @@ runs:
       working-directory: "./desktop"
 
     - name: Install additional ubuntu dependencies
-      if: inputs.host == 'ubuntu-22.04'
+      if: inputs.host == 'ubuntu-latest'
       shell: bash
       run: |
         sudo apt-get update
