--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -46,16 +46,6 @@ jobs:
           telemetry_private_key: ""
           crane_private_key: ""
 
-      - name: Rust cache
-        if: matrix.target == 'x86_64-unknown-linux-gnu'
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: "./desktop/src-tauri -> target"
-        
-      - name: Install frontend dependencies
-        run: yarn install
-        working-directory: "./desktop"
-
       - name: Build Desktop App
         if: matrix.target == 'x86_64-unknown-linux-gnu'
         uses: tauri-apps/tauri-action@v0.6
@@ -64,9 +54,9 @@ jobs:
           args: "--target ${{ matrix.target }} --config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY || 'dummy' }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY || 'dummy' }}
           # TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY || 'dummy' }}
-          # TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD || 'dummy' }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD || 'dummy' }}
           # TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD || 'dummy' }}
 
       - name: Upload CLI Artifacts
