fixup!: limit detention for build artifacts
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -71,6 +71,7 @@ jobs:
         with:
           name: linux-${{ matrix.target }}-desktop
           path: desktop/src-tauri/target/release/bundle/**/*
+          retention-days: 1
 
   build-macos:
     needs: [build-linux]
@@ -119,6 +120,7 @@ jobs:
           path: |
             devpod-darwin-*
             desktop/src-tauri/target/release/bundle/**/*
+          retention-days: 1
 
   build-windows:
     needs: [build-linux]
@@ -163,3 +165,4 @@ jobs:
           path: |
             devpod-windows-*
             desktop/src-tauri/target/release/bundle/**/*
+          retention-days: 1
