fixup!: tauri update signing key
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/build-tauri-app/action.yml
+++ b/.github/actions/build-tauri-app/action.yml
@@ -25,6 +25,7 @@ inputs:
   tauri_key_password:
     description: Tauri key password
     required: false
+    default: ""
 
 runs:
   using: composite
@@ -39,4 +40,4 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
         TAURI_SIGNING_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
-        # TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
+        TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
