--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -50,14 +50,13 @@ jobs:
 
       - name: Build Desktop App
         if: matrix.target == 'x86_64-unknown-linux-gnu'
-        uses: tauri-apps/tauri-action@v0.6
+        uses: ./.github/actions/build-tauri-app
         with:
           projectPath: "./desktop"
           args: "--target ${{ matrix.target }} --config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          tauri_private_key: ${{ secrets.TAURI_PRIVATE_KEY }}
+          tauri_key_password: ${{ secrets.TAURI_KEY_PASSWORD }}
 
       - name: Upload CLI Artifacts
         uses: actions/upload-artifact@v4
